--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "draft-js",
+  "name": "@wix/draft-js",
   "description": "A React framework for building text editors.",
   "version": "0.10.5",
   "keywords": [
@@ -29,13 +29,15 @@
     "lint": "eslint .",
     "format": "eslint . --fix",
     "flow": "flow src",
-    "test": "NODE_ENV=test jest",
-    "test-ci": "NODE_ENV=test npm run lint && npm run flow && npm run test"
+    "test": "cross-env NODE_ENV=test jest",
+    "test-ci": "cross-env  NODE_ENV=test npm run lint && npm run flow && npm run test",
+    "release": "wnpm-release --no-shrinkwrap"
   },
   "dependencies": {
     "fbjs": "^0.8.15",
     "immutable": "~3.7.4",
-    "object-assign": "^4.1.0"
+    "object-assign": "^4.1.0",
+    "wnpm-ci": "^7.0.1"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0-rc || ^16.0.0-rc || ^16.0.0",
@@ -45,6 +47,7 @@
     "babel-core": "^6.8.0",
     "babel-eslint": "^7.2.3",
     "babel-preset-fbjs": "^2.1.0",
+    "cross-env": "^5.2.0",
     "del": "^2.2.0",
     "envify": "^3.4.0",
     "es6-shim": "^0.34.4",
@@ -116,5 +119,9 @@
       "<rootDir>/node_modules/react/",
       "<rootDir>/node_modules/react-dom/"
     ]
+  },
+  "unpkg": true,
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
