--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   },
   "devEngines": {
     "node": "6.x || 8.x",
-    "npm": "2.x || 3.x || 5.x"
+    "npm": "2.x || 3.x || 5.x || 6.x"
   },
   "jest": {
     "automock": true,
