publishConfig.access = 'public'

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
   },
   "unpkg": true,
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
