--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "alex": "^8.0.0",
     "fbjs": "^1.0.0",
-    "immutable": "~3.7.4",
+    "immutable": "^3.8.2",
     "object-assign": "^4.1.1"
   },
   "peerDependencies": {
